kubernetes/apps/network/envoy-gateway/app/envoy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gatewayclass_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy
    namespace: network
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname internal-staging.ergho.org
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: 192.168.90.245
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ergho-org-tls
            #---
            ## yaml-language-server: $schema=https://raw.githubusercontent.com/envoyproxy/gateway/refs/heads/main/charts/gateway-helm/crds/generated/gateway.envoyproxy.io_clienttrafficpolicies.yaml
            #apiVersion: gateway.envoyproxy.io/v1alpha1
            #kind: BackendTrafficPolicy
            #metadata:
            #  name: envoy
            #spec:
            #  compression:
            #    - type: Brotli
            #    - type: Gzip
            #  connection:
            #    bufferLimit: 8Mi
            #  targetSelectors:
            #    - group: gateway.networking.k8s.io
            #      kind: Gateway
            #  tcpKeepalive: {}
            #  timeout:
            #    http:
            #      requestTimeout: 0s
            #---
            ## yaml-language-server: $schema=https://raw.githubusercontent.com/envoyproxy/gateway/refs/heads/main/charts/gateway-helm/crds/generated/gateway.envoyproxy.io_clienttrafficpolicies.yaml
            #apiVersion: gateway.envoyproxy.io/v1alpha1
            #kind: ClientTrafficPolicy
            #metadata:
            #  name: envoy
            #spec:
            #  clientIPDetection:
            #    xForwardedFor:
            #      numTrustedHops: 1
            #  connection:
            #    bufferLimit: 4Mi
            #    maxAcceptPerSocketEvent: 0
            #  http2:
            #    initialStreamWindowSize: 512Ki
            #    initialConnectionWindowSize: 8Mi
            #    onInvalidMessage: TerminateStream
            #  http3: {}
            #  targetSelectors:
            #    - group: gateway.networking.k8s.io
            #      kind: Gateway
            #  tcpKeepalive: {}
            #  timeout:
            #    http:
            #      requestReceivedTimeout: 0s
            #  tls:
            #    minVersion: "1.2"
            #    alpnProtocols:
            #      - h2
            #      - http/1.1
            #---
            ## yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
            #apiVersion: gateway.networking.k8s.io/v1
            #kind: HTTPRoute
            #metadata:
            #  name: https-redirect
            #  annotations:
            #    external-dns.alpha.kubernetes.io/controller: none
            #spec:
            #  parentRefs:
            #    - name: envoy-external
            #      namespace: network
            #      sectionName: http
            #    - name: envoy-internal
            #      namespace: network
            #      sectionName: http
            #  rules:
            #    - filters:
            #        - type: RequestRedirect
            #          requestRedirect:
            #            scheme: https
            #            statusCode: 301
